Bug fix overflow - about fix not finished

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -564,7 +564,7 @@ html {
 
 .item-title {
     margin: 0 auto 5px auto;
-    padding-bottom: 3px;
+    /* padding-bottom: 3px; */
     /* text-decoration-line: underline; */
     font-size: 1.2em;
     /* border-bottom: 2px solid rgb(79, 81, 102); */
@@ -977,7 +977,7 @@ h3 {
 .about-logo
 {
     vertical-align: middle;
-    width: 100px;
+    width: 50px;
     height: auto;
 }
 
@@ -1189,7 +1189,6 @@ body {
     }
 
     .modalItemDetails {
-        background-color: rgb(30, 255, 0);
         max-width: 100%;
         min-width: 100%;
         height: 30%;
